--- a/hans_zimmer.ipynb
+++ b/hans_zimmer.ipynb
@@ -268,19 +268,7 @@
     "    data_b.append(b[i:i+SEQ_LEN])\n",
     "\n",
     "X = [i[:-1] for i in train]\n",
-    "Y = [i[-1] for i in train]\n",
-    "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=VAL_PCT)\n",
-    "\n",
-    "X_train = np.array(X_train).squeeze()\n",
-    "X_test = np.array(X_test).squeeze()\n",
-    "Y_train = np.array(Y_train).squeeze()\n",
-    "Y_test = np.array(Y_test).squeeze()\n",
-    "\n",
-    "X_train = torch.tensor(X_train).float().cuda()\n",
-    "Y_train = torch.tensor(Y_train).float().cuda()\n",
-    "X_test = torch.tensor(X_test).long().cuda()\n",
-    "Y_test = torch.tensor(Y_test).long().cuda()"
+    "Y = [i[-1] for i in train]"
    ]
   }
  ]
