doesn't sound like anything but it works

--- a/hans_zimmer.ipynb
+++ b/hans_zimmer.ipynb
@@ -38,6 +38,7 @@
     "import scipy.io.wavfile as wav\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import librosa as libr\n",
     "\n",
     "from tqdm import tqdm\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -55,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_rate, coggers = wav.read('data/hans_zimmer/coggers.wav')"
+    "coggers, sample_rate = libr.load('data/hans_zimmer/coggers.wav', sr=8000, mono=False)"
    ]
   },
   {
@@ -67,7 +68,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(10590336, 44100)"
+       "(1921150, 8000)"
       ]
      },
      "metadata": {},
@@ -75,7 +76,7 @@
     }
    ],
    "source": [
-    "length = len(coggers)\n",
+    "length = len(coggers[0])\n",
     "\n",
     "length, sample_rate"
    ]
@@ -89,7 +90,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "44126.4"
+       "8004.791666666667"
       ]
      },
      "metadata": {},
@@ -110,8 +111,8 @@
    "source": [
     "# split the data into two tracks for separate training\n",
     "\n",
-    "a = coggers[:,0]\n",
-    "b = coggers[:,1]"
+    "a = coggers[0]\n",
+    "b = coggers[1]"
    ]
   },
   {
@@ -133,7 +134,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "22050\n"
+      "4000\n"
      ]
     }
    ],
@@ -148,9 +149,10 @@
     "\n",
     "# gonna list some powers of 2 here for reference\n",
     "# 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144, 524288, 1048576, 2097152\n",
-    "HIDDEN_DIM = 1024\n",
+    "HIDDEN_DIM = 2048\n",
     "N_LAYERS = 2\n",
-    "OUT_DIM = 1\n",
+    "\n",
+    "OUT_DIM = 100\n",
     "\n",
     "EPOCHS = 4\n",
     "LR = 0.001"
@@ -183,89 +185,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'data_a = []\\ndata_b = []\\n\\nfor i in tqdm(range(len(a)-SEQ_LEN)):\\n    data_a.append(a[i:i+SEQ_LEN])\\n    data_b.append(b[i:i+SEQ_LEN])\\n\\nX_a = [i[:-1] for i in data_a]\\nY_a = [i[-1] for i in data_a]\\n\\nX_b = [i[:-1] for i in data_b]\\nY_b = [i[-1] for i in data_b]'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
-   "source": [
-    "'''data_a = []\n",
-    "data_b = []\n",
-    "\n",
-    "for i in tqdm(range(len(a)-SEQ_LEN)):\n",
-    "    data_a.append(a[i:i+SEQ_LEN])\n",
-    "    data_b.append(b[i:i+SEQ_LEN])\n",
-    "\n",
-    "X_a = [i[:-1] for i in data_a]\n",
-    "Y_a = [i[-1] for i in data_a]\n",
-    "\n",
-    "X_b = [i[:-1] for i in data_b]\n",
-    "Y_b = [i[-1] for i in data_b]'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "\"X_a = np.array(X_a, dtype='float32').squeeze()\\nX_b = np.array(X_b).squeeze()\\nY_a = np.array(Y_a).squeeze()\\nY_b = np.array(Y_b).squeeze()\\n\\nX_a = torch.tensor(X_a).float().cuda()\\nY_a = torch.tensor(Y_a).float().cuda()\\nX_b = torch.tensor(X_b).float().cuda()\\nY_a = torch.tensor(Y_a).float().cuda()\""
-      ]
-     },
-     "metadata": {},
-     "execution_count": 11
-    }
-   ],
-   "source": [
-    "'''X_a = np.array(X_a, dtype='float32').squeeze()\n",
-    "X_b = np.array(X_b).squeeze()\n",
-    "Y_a = np.array(Y_a).squeeze()\n",
-    "Y_b = np.array(Y_b).squeeze()\n",
-    "\n",
-    "X_a = torch.tensor(X_a).float().cuda()\n",
-    "Y_a = torch.tensor(Y_a).float().cuda()\n",
-    "X_b = torch.tensor(X_b).float().cuda()\n",
-    "Y_a = torch.tensor(Y_a).float().cuda()'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'train_set_a = TensorDataset(X_a, Y_a)\\ntrain_set_b = TensorDataset(X_b, Y_b)\\n\\nloader_a = DataLoader(train_set_a, batch_size=BATCH_SIZE, shuffle=False)\\nloader_b = DataLoader(train_set_b, batch_size=BATCH_SIZE, shuffle=False)'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
-   "source": [
-    "'''train_set_a = TensorDataset(X_a, Y_a)\n",
-    "train_set_b = TensorDataset(X_b, Y_b)\n",
-    "\n",
-    "loader_a = DataLoader(train_set_a, batch_size=BATCH_SIZE, shuffle=False)\n",
-    "loader_b = DataLoader(train_set_b, batch_size=BATCH_SIZE, shuffle=False)'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [],
    "source": [
     "class LSTM(nn.Module):\n",
@@ -285,67 +204,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_a = LSTM(SEQ_LEN, HIDDEN_DIM, N_LAYERS, OUT_DIM).cuda()\n",
-    "optimizer_a = optim.Adam(model_a.parameters(), lr=LR)\n",
+    "# losses_a = []\n",
+    "# losses_b = []\n",
+    "def train():\n",
+    "    model_a = LSTM(SEQ_LEN, HIDDEN_DIM, N_LAYERS, OUT_DIM).cuda()\n",
+    "    optimizer_a = optim.Adam(model_a.parameters(), lr=LR)\n",
     "\n",
-    "# model_b = LSTM(SEQ_LEN, HIDDEN_DIM, N_LAYERS, OUT_DIM).cuda()\n",
-    "# optimizer_b = optim.Adam(model_b.parameters(), lr=LR)\n",
+    "    model_b = LSTM(SEQ_LEN, HIDDEN_DIM, N_LAYERS, OUT_DIM).cuda()\n",
+    "    optimizer_b = optim.Adam(model_b.parameters(), lr=LR)\n",
     "\n",
-    "loss_fn = nn.MSELoss()"
+    "    loss_fn = nn.MSELoss()\n",
+    "\n",
+    "\n",
+    "    for epoch in range(EPOCHS):\n",
+    "        for i in tqdm(  range(  int((len(a)-SEQ_LEN)/OUT_DIM)  )  ):\n",
+    "            Xa = a[i*OUT_DIM : i*OUT_DIM + SEQ_LEN]\n",
+    "            Ya = a[i*OUT_DIM+SEQ_LEN : (i+1)*OUT_DIM + SEQ_LEN]\n",
+    "\n",
+    "            Xa = Xa.view(-1, SEQ_LEN)\n",
+    "\n",
+    "            out_a = model_a(Xa)\n",
+    "            loss_a = loss_fn(out_a, Ya)\n",
+    "\n",
+    "            model_a.zero_grad()\n",
+    "            loss_a.backward()\n",
+    "            optimizer_a.step()\n",
+    "            # losses_a.append(loss_a)\n",
+    "\n",
+    "            \n",
+    "            Xb = b[i:i+SEQ_LEN]\n",
+    "            Yb = b[i+SEQ_LEN]\n",
+    "\n",
+    "            Xb = Xb.view(-1, SEQ_LEN)\n",
+    "\n",
+    "\n",
+    "            out_b = model_b(Xb)\n",
+    "            loss_b = loss_fn(out_b, Yb)\n",
+    "\n",
+    "            model_b.zero_grad()\n",
+    "            loss_b.backward()\n",
+    "            optimizer_b.step()\n",
+    "            # losses_b.append(loss_b)\n",
+    "\n",
+    "\n",
+    "    torch.save(model_a.state_dict(), 'models/hans_zimmer/first_a.pt')\n",
+    "    torch.save(model_b.state_dict(), 'models/hans_zimmer/first_b.pt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "model_a = LSTM(SEQ_LEN, HIDDEN_DIM, N_LAYERS, OUT_DIM).cuda()\n",
+    "model_b = LSTM(SEQ_LEN, HIDDEN_DIM, N_LAYERS, OUT_DIM).cuda()\n",
+    "\n",
+    "model_a.load_state_dict(torch.load('models/hans_zimmer/first_a.pt'))\n",
+    "model_b.load_state_dict(torch.load('models/hans_zimmer/first_b.pt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "  0%|          | 1138/10568286 [00:43<119:15:48, 24.61it/s]"
+      "100%|██████████| 19171/19171 [01:42<00:00, 187.93it/s]\n"
      ]
     }
    ],
    "source": [
-    "losses_a = []\n",
-    "losses_b = []\n",
+    "pred_a = torch.tensor([])\n",
+    "pred_b = torch.tensor([])\n",
     "\n",
-    "for epoch in range(EPOCHS):\n",
-    "    for i in tqdm(range(len(a)-SEQ_LEN)):\n",
-    "        Xa = a[i:i+SEQ_LEN]\n",
-    "        Ya = a[i+SEQ_LEN]\n",
+    "for i in tqdm(  range(  int((len(a)-SEQ_LEN)/OUT_DIM)  )  ):\n",
+    "    Xa = a[i*OUT_DIM : i*OUT_DIM + SEQ_LEN]\n",
+    "    Xb = b[i*OUT_DIM : i*OUT_DIM + SEQ_LEN]\n",
     "\n",
-    "        Xa = Xa.view(-1, SEQ_LEN)\n",
+    "    Xa = Xa.view(-1, SEQ_LEN)\n",
+    "    Xb = Xb.view(-1, SEQ_LEN)\n",
     "\n",
-    "        out_a = model_a(Xa)\n",
-    "        loss_a = loss_fn(out_a, Ya)\n",
+    "    out_a = model_a(Xa).squeeze().cpu()\n",
+    "    out_b = model_b(Xb).squeeze().cpu()\n",
     "\n",
-    "        model_a.zero_grad()\n",
-    "        loss_a.backward()\n",
-    "        optimizer_a.step()\n",
-    "        losses_a.append(loss_a)\n",
-    "\n",
-    "        \n",
-    "        '''Xb = b[i:i+SEQ_LEN]\n",
-    "        Yb = b[i+SEQ_LEN]\n",
-    "\n",
-    "        Xb = Xb.view(-1, SEQ_LEN)\n",
-    "\n",
-    "\n",
-    "        out_b = model_b(Xb)\n",
-    "        loss_b = loss_fn(out_b, Yb)\n",
-    "\n",
-    "        model_b.zero_grad()\n",
-    "        loss_b.backward()\n",
-    "        optimizer_b.step()\n",
-    "        losses_b.append(loss_b)'''\n",
-    "\n",
-    "        "
+    "    pred_a = torch.cat((pred_a, out_a))\n",
+    "    pred_b = torch.cat((pred_b, out_b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_a = pred_a.detach().numpy()\n",
+    "pred_b = pred_b.detach().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song = np.stack((pred_a, pred_b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav.write('data/hans_zimmer/out.wav', sample_rate, song.T)"
    ]
   }
  ]
